overflow issues

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -195,6 +195,11 @@ col-3, col-5, col-6, col-8, col-xs-12, col-md-5{
     color: white;
 }
 
+.resize-font{
+  font-size: 2.25vw;
+  overflow: scroll;
+}
+
 .white-back {
   background-color: white;
 }
